Cambios en carpeta

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .editorconfig
 *.code-workspace
 images/pic_profile.webp
+mockup_landing/node_modules
+mockup_landing/node_modules
+mockup_landing/css/tailwind.css
+mockup_landing/package-lock.json
+mockup_landing/package.json
+mockup_landing/postcss.config.js
+mockup_landing/tailwind.config.js
